Revert "Updates to add in the hover states on good and food"
This reverts commit 9803d9f54eb9e27f7f3e9c9e3e0ee18881b098b6.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <a class="logo" href="#">fare.studio</a>
   </nav>
   <section class="hero">
-    <h1>Design for <a>good</a> <a>food</a></h1>
+    <h1>Design for good food</h1>
     <p>A food related design agency launching soon.</p>
   </section>
 </body>
