--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Fare - A Design Studio For Good Food</title>
   <link rel="stylesheet" href="./reset.css">
   <link rel="stylesheet" href="./styles.css">
-  <link rel='shortcut icon' href='./favicon.ico' type='image/x-icon'/ >
+  <link rel='shortcut icon' href='./img/favicon.png' type='image/png'/ >
 </head>
 <body>
   <nav>
