--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <nav>
     <a class="logo" href="#">fare.studio</a>
-    <a class="email" href="#">email me</a>
+    <a class="email" href="mailto:sean@geraghty.co">email me</a>
   </nav>
   <section class="hero">
     <h1>Design for good food</h1>
