Added in link to homepage

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <nav>
-    <a class="logo" href="#">fare.studio</a>
+    <a class="logo" href="https://fare.studio">fare.studio</a>
     <a class="email" href="mailto:sean@geraghty.co">email me</a>
   </nav>
   <section class="hero">
