--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<meta name="description" content="Fare is a a food related design agency launching soon.">
+	<meta name="description" content="Fare is a studio focussed on doing good whilst working with food brands">
   <meta name="keywords" content="food brand startup small independent web mobile design product designer">
-  <title>Fare - A Design Studio For Good Food</title>
+  <title>Fare - A studio focussed on doing good whilst working with food brands</title>
   <link rel="stylesheet" href="./reset.css">
   <link rel="stylesheet" href="./styles.css">
   <link rel='shortcut icon' href='./img/favicon.png' type='image/png'/ >
