--- a/talking_sumac.html
+++ b/talking_sumac.html
@@ -4,7 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<meta name="description" content="Fare is a a food related design agency launching soon.">
+	<meta name="description" content="Fare is a studio focussed on doing good whilst working with food brands">
   <meta name="keywords" content="food brand startup small independent web mobile design product designer">
   <title>Fare - Talking Sumac</title>
   <link rel="stylesheet" href="./reset.css">
