Update my email address

--- a/talking_sumac.html
+++ b/talking_sumac.html
@@ -14,7 +14,7 @@
 <body class="work">
   <nav>
     <a class="logo" href="https://fare.studio">fare.studio</a>
-    <a class="email" href="mailto:sean@geraghty.co">email me</a>
+    <a class="email" href="mailto:hello@fare.studio">email me</a>
   </nav>
   <section class="hero">
     <h1>Stop Talking Sumac</h1>
