--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<meta name="description" content="Fare is a studio focussed on doing good whilst working with food brands">
+	<meta name="description" content="Fare - A studio working with food brands doing good">
   <meta name="keywords" content="food brand startup small independent web mobile design product designer">
   <title>Fare - A studio focussed on doing good whilst working with food brands</title>
   <link rel="stylesheet" href="./reset.css">
