--- a/index2.html
+++ b/index2.html
@@ -20,12 +20,11 @@
     <h1>Fare is a design studio working with brands doing something good and something new.</h1>
     <h1><a href="mailto:hello@fare.studio">Email</a></h1>
   </section>
-  <section class="project-grid">
-    <a class="right project-thumbnail" href="#"><img src="./img/home/the_pass_home.jpg" alt="The Pass - Project Page"></a>
-    <a class="left project-thumbnail" href="#"><img src="./img/home/littleuns_home.jpg" alt="Littleuns - Project Page"></a>
-  </section>
-  <section class="project-grid">
-    <a class="right project-thumbnail" href="#"><img src="./img/home/talking_sumac_home.jpg" alt="Talking Sumac - Project Page"></a>
-    <a class="left project-thumbnail" href="#"><img src="./img/home/photography_home.jpg" alt="Photography"></a>
+  <section class="project-display">
+    <a class="project-thumbnail" href="#"></a>
+    <a class="project-thumbnail" href="#"><img src="./img/home/the_pass_home.jpg" alt="The Pass - Project Page"></a>
+    <a class="project-thumbnail" href="#"><img src="./img/home/littleuns_home.jpg" alt="Littleuns - Project Page"></a>
+    <a class="project-thumbnail" href="#"><img src="./img/home/talking_sumac_home.jpg" alt="Talking Sumac - Project Page"></a>
+    <a class="project-thumbnail" href="#"><img src="./img/home/photography_home.jpg" alt="Photography"></a>
   </section>
 </body>
