--- a/index2.html
+++ b/index2.html
@@ -22,9 +22,29 @@
   </section>
   <section class="project-display">
     <a class="project-thumbnail" href="#"></a>
-    <a class="project-thumbnail" href="#"><img src="./img/home/the_pass_home.jpg" alt="The Pass - Project Page"></a>
-    <a class="project-thumbnail" href="#"><img src="./img/home/littleuns_home.jpg" alt="Littleuns - Project Page"></a>
-    <a class="project-thumbnail" href="#"><img src="./img/home/talking_sumac_home.jpg" alt="Talking Sumac - Project Page"></a>
-    <a class="project-thumbnail" href="#"><img src="./img/home/photography_home.jpg" alt="Photography"></a>
+    <a class="project-thumbnail" href="#">
+      <div class="overlay">
+        <img class="project-thumbnail-logo" src="./img/home/the_pass_logo.png" alt="The Pass - Logo">
+      </div>
+      <img class="project-thumbnail-background" src="./img/home/the_pass_home.jpg" alt="The Pass - Project Page">
+    </a>
+    <a class="project-thumbnail" href="#">
+      <div class="overlay">
+        <img class="project-thumbnail-logo" src="./img/home/littleuns_logo.png" alt="Littleuns - Logo">
+      </div>
+      <img class="project-thumbnail-background" src="./img/home/littleuns_home.jpg" alt="Littleuns - Project Page">
+    </a>
+    <a class="project-thumbnail" href="#">
+      <div class="overlay">
+        <img class="project-thumbnail-logo" src="./img/home/talking_sumac_logo.png" alt="Talking Sumac - Logo">
+      </div>
+      <img class="project-thumbnail-background" src="./img/home/talking_sumac_home.jpg" alt="Talking Sumac - Project Page">
+    </a>
+    <a class="project-thumbnail" href="#">
+      <div class="overlay">
+        <img class="project-thumbnail-logo" src="./img/home/photography_logo.png" alt="Photography - Logo">
+      </div>
+      <img class="project-thumbnail-background" src="./img/home/photography_home.jpg" alt="Photography">
+    </a>
   </section>
 </body>
