--- a/index.html
+++ b/index.html
@@ -4,28 +4,50 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<meta name="description" content="Fare - A studio working with food brands doing good">
+	<meta name="description" content="Fare - A studio focussed on doing good">
   <meta name="keywords" content="food brand startup small independent web mobile design product designer">
-  <title>Fare - A studio focussed on doing good whilst working with food brands</title>
+  <title>Fare - A studio focussed on doing good</title>
   <link rel="stylesheet" href="./reset.css">
   <link rel="stylesheet" href="./styles.css">
   <link rel='shortcut icon' href='./img/favicon.png' type='image/png'/ >
 </head>
 <body>
   <nav>
-    <a href="https://instagram.com/fare.studio"><img src="img/instagram.png" height="24px" width="24px"></a>
     <a class="logo" href="https://fare.studio">Fare</a>
+    <a href="https://instagram.com/fare.studio"><img src="img/instagram.png" height="24px" width="24px"></a>
   </nav>
   <section class="hero">
     <h1>Fare is a design studio working with brands doing something good and something new.</h1>
     <h1><a href="mailto:hello@fare.studio">Email</a></h1>
   </section>
   <section class="project-grid">
-    <a class="right project-thumbnail" href="#"><img src="./img/home/the_pass_home.jpg" alt="The Pass - Project Page"></a>
-    <a class="left project-thumbnail" href="#"><img src="./img/home/littleuns_home.jpg" alt="Littleuns - Project Page"></a>
-  </section>
-  <section class="project-grid">
-    <a class="right project-thumbnail" href="#"><img src="./img/home/talking_sumac_home.jpg" alt="Talking Sumac - Project Page"></a>
-    <a class="left project-thumbnail" href="#"><img src="./img/home/photography_home.jpg" alt="Photography"></a>
+    <a class="project-thumbnail" href="#"></a>
+    <a class="project-thumbnail" href="./the_pass.html">
+      <div class="overlay">
+        <img class="project-thumbnail-logo" src="./img/home/the_pass_logo.png" alt="The Pass - Logo">
+      </div>
+      <img class="project-thumbnail-background" src="./img/home/the_pass_home.jpg" alt="The Pass - Project Page">
+    </a>
+    <a class="project-thumbnail" href="./littleuns.html">
+      <div class="overlay">
+        <img class="project-thumbnail-logo" src="./img/home/littleuns_logo.png" alt="Littleuns - Logo">
+      </div>
+      <img class="project-thumbnail-background" src="./img/home/littleuns_home.jpg" alt="Littleuns - Project Page">
+    </a>
+    <a class="project-thumbnail" href="#">
+      <div class="overlay">
+        <img class="project-thumbnail-logo" src="./img/home/talking_sumac_logo.png" alt="Talking Sumac - Logo">
+      </div>
+      <img class="project-thumbnail-background" src="./img/home/talking_sumac_home.jpg" alt="Talking Sumac - Project Page">
+    </a>
+    <a class="project-thumbnail" href="#">
+      <div class="overlay">
+        <img class="project-thumbnail-logo" src="./img/home/photography_logo.png" alt="Photography - Logo">
+      </div>
+      <img class="project-thumbnail-background" src="./img/home/photography_home.jpg" alt="Photography">
+    </a>
   </section>
 </body>
+<footer>
+  <p>Copyright © Fare Studio Limited</p>
+</footer>
