Added Talking Sumac + Tweaks to project pages

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
   </nav>
   <section class="hero">
     <h1>Fare is a design studio working with brands doing something good and something new.</h1>
-    <h1><a href="mailto:hello@fare.studio">Email</a></h1>
+    <h1><a class="underline" href="mailto:hello@fare.studio">Email</a></h1>
   </section>
   <section class="project-grid">
     <a class="project-thumbnail" href="#"></a>
-    <a class="project-thumbnail" href="./the_pass.html">
+    <a class="project-thumbnail" href="./the-pass.html">
       <div class="overlay">
         <img class="project-thumbnail-logo" src="./img/home/the_pass_logo.png" alt="The Pass - Logo">
       </div>
@@ -34,7 +34,7 @@
       </div>
       <img class="project-thumbnail-background" src="./img/home/littleuns_home.jpg" alt="Littleuns - Project Page">
     </a>
-    <a class="project-thumbnail" href="#">
+    <a class="project-thumbnail" href="./talking-sumac.html">
       <div class="overlay">
         <img class="project-thumbnail-logo" src="./img/home/talking_sumac_logo.png" alt="Talking Sumac - Logo">
       </div>
