Mobile responsive fixes

--- a/the-pass.html
+++ b/the-pass.html
@@ -17,7 +17,7 @@
     <a href="https://instagram.com/fare.studio" target="_blank"><img src="img/instagram.png" height="24px" width="24px"></a>
   </nav>
   <section>
-    <h1>The Pass <a class="header-link" href="https://thepass.london" target="_blank"><span>View</span><img src="./img/arrow-external.svg"></a></h1>
+    <h1>The Pass <a class="header-link" href="https://thepass.london" target="_blank"><span>View</span><img class="arrow-link" src="./img/arrow-external.svg"></a></h1>
     <p class="date">May 2020</p>
     <p>The Pass was set up as a collaboration project between myself, Alex Lazzare and a few others to help the restaurant industry in it’s greatest time of need.</p>
     <p>The project was born from the frustration we all felt watching an industry we all love so dearly be forced to shut up shop and be left helpless by a situation far out of their control.</p>
@@ -43,7 +43,7 @@
     <p>One of the biggest considerations was how to get our partners recipes to shine. therefore we decided to maximise the amount of screen space an image could take up without you not being able to also parse the information on the page whether you were browsing on your laptop, tablet or phone.</p>
     <img src="./img/the_pass/the_pass_7.jpg" alt="The Pass - iPhone 11 recipe page view">
   </section>
-  <h1 class="next-project">Next Project <a class="header-link" href="./littleuns.html"><span>Littleuns</span><img src="./img/arrow-internal.svg"></a></h1>
+  <h1 class="next-project">Next Project <a class="header-link" href="./littleuns.html"><span>Littleuns</span><img class="arrow-link" src="./img/arrow-internal.svg"></a></h1>
   <footer>
     <p>Copyright © Fare Studio Limited</p>
   </footer>
