--- a/littleuns.html
+++ b/littleuns.html
@@ -17,7 +17,8 @@
     <a href="https://instagram.com/fare.studio" target="_blank"><img src="img/instagram.png" height="24px" width="24px"></a>
   </nav>
   <section>
-    <h1>Littleuns <a class="header-link" href="https://littleunscakes.com" target="_blank"><span>View</span><img src="./img/arrow-external.svg"></a></h1>
+    <h1>Littleuns <a class="header-link" href="https://littleunscakes.com" target="_blank"><span>View</span><img class="arrow-link" src="./img/arrow-external.svg"></a></h1>
+    <p class="date">March 2020</p>
     <p>Littleuns is a small new bakery in Hertfordshire specialising in sweet treats. Due to the size and nature of the business it was vital that the owners personality and taste shone through in everything from the brand name to the packaging their postal brownies would arrive in.</p>
     <img class="littleuns-logo" src="./img/littleuns/littleuns_1.png" alt="Littleuns - Logo Development">
     <p class="caption">Littleuns logo design progression</p>
@@ -42,7 +43,7 @@
     <p>Keeping your customers informed, especially with allergen information is a huge part to any food business. To help Littleuns establish best practice around this we created some small cards to be inserted into the box with all products that would include detail on any potential allergens with a space to include either the product name or a message on the front-side of the card.</p>
     <img src="./img/littleuns/littleuns_7.jpg" alt="Littleuns - Cupcake box photo">
   </section>
-  <h1 class="next-project">Next Project <a class="header-link" href="./talking-sumac.html"><span>Talking Sumac</span><img src="./img/arrow-internal.svg"></a></h1>
+  <h1 class="next-project">Next Project <a class="header-link" href="./talking-sumac.html"><span>Talking Sumac</span><img class="arrow-link" src="./img/arrow-internal.svg"></a></h1>
   <footer>
     <p>Copyright © Fare Studio Limited</p>
   </footer>
