--- a/talking-sumac.html
+++ b/talking-sumac.html
@@ -17,7 +17,8 @@
     <a href="https://instagram.com/fare.studio" target="_blank"><img src="img/instagram.png" height="24px" width="24px"></a>
   </nav>
   <section>
-    <h1>Talking Sumac <a class="header-link" href="https://talkingsumac.com" target="_blank"><span>View</span><img src="./img/arrow-external.svg"></a></h1>
+    <h1>Talking Sumac <a class="header-link" href="https://talkingsumac.com" target="_blank"><span>View</span><img class="arrow-link" src="./img/arrow-external.svg"></a></h1>
+    <p class="date">February 2020</p>
     <p>Food is a second passion to me alongside design. I launched Talking Sumac to hold my recipes somewhere online allowing me to not only to share my love of cooking but also my recipes with family and friends.</p>
     <img src="./img/talking_sumac/talking_sumac_1.jpg" alt="Talking Sumac - Home Page">
     <p>Sumac is one of my favourite spices and trying to play off of the phrase “Talking Smack” - I came up with Talking Sumac. I had a vague idea of where I wanted to take this brand but I thought it wise to bring in the natural colour palette of the Sumac berry which is where the vibrant red and rich green colour scheme comes into play.</p>
@@ -28,7 +29,7 @@
     <p>Alongside creating the recipes I also shoot all the food that goes into the collection. Talking Sumac is very much a work in development but one I hope to keep adding to over the course of the years to come.</p>
     <img src="./img/talking_sumac/talking_sumac_4.jpg" alt="Talking Sumac - Blueberry Pancakes">
   </section>
-  <h1 class="next-project">Next Project <a class="header-link" href="./the-pass.html"><span>The Pass</span><img src="./img/arrow-internal.svg"></a></h1>
+  <h1 class="next-project">Next Project <a class="header-link" href="./the-pass.html"><span>The Pass</span><img class="arrow-link" src="./img/arrow-internal.svg"></a></h1>
   <footer>
     <p>Copyright © Fare Studio Limited</p>
   </footer>
