Added Photography + Coders of Colour work

--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
   </section>
   <section class="project-grid">
     <a class="project-thumbnail" href="#"></a>
+    <a class="project-thumbnail" href="./coders-of-colour.html">
+      <div class="overlay">
+        <img class="project-thumbnail-logo" src="./img/home/coders_of_colour_logo.png" alt="Coders of Colour - Logo">
+      </div>
+      <img class="project-thumbnail-background" src="./img/home/coders_of_colour_home.jpg" alt="The Pass - Project Page">
+    </a>
     <a class="project-thumbnail" href="./the-pass.html">
       <div class="overlay">
         <img class="project-thumbnail-logo" src="./img/home/the_pass_logo.png" alt="The Pass - Logo">
@@ -40,7 +46,7 @@
       </div>
       <img class="project-thumbnail-background" src="./img/home/talking_sumac_home.jpg" alt="Talking Sumac - Project Page">
     </a>
-    <a class="project-thumbnail" href="#">
+    <a class="project-thumbnail" href="./photography.html">
       <div class="overlay">
         <img class="project-thumbnail-logo" src="./img/home/photography_logo.png" alt="Photography - Logo">
       </div>
