--- a/talking-sumac.html
+++ b/talking-sumac.html
@@ -29,7 +29,7 @@
     <p>Alongside creating the recipes I also shoot all the food that goes into the collection. Talking Sumac is very much a work in development but one I hope to keep adding to over the course of the years to come.</p>
     <img src="./img/talking_sumac/talking_sumac_4.jpg" alt="Talking Sumac - Blueberry Pancakes">
   </section>
-  <h1 class="next-project">Next Project <a class="header-link" href="./the-pass.html"><span>The Pass</span><img class="arrow-link" src="./img/arrow-internal.svg"></a></h1>
+  <h1 class="next-project">Next Project <a class="header-link" href="./photography.html"><span>Food Photography</span><img class="arrow-link" src="./img/arrow-internal.svg"></a></h1>
   <footer>
     <p>Copyright © Fare Studio Limited</p>
   </footer>
