--- a/fare_new/index.html
+++ b/fare_new/index.html
@@ -25,7 +25,11 @@
     </div>
   </nav>
 
-  <a href="#" class="hp-project">
+  <section>
+    <h1>We work with ambitious brands, to build something new.</h1>
+  </section>
+
+  <a href="#" class="hp-project" id="work">
     <div class="hp-description">
       <h3>Built Open</h3>
       <p>Launching 2021</p>
@@ -34,11 +38,11 @@
   </a>
 
   <section>
-    <h1>We are a design studio that work with amibitious brands, to build something fun, interesting and new.</h1>
+    <h2>We are your perfect design partner. We work with businesses who want to build something fun, interesting and new to bring out the best from your business and team.</h2>
     <a href="mailto:hi@fare.studio" class="large underline">Work with us</a>
   </section>
 
-  <a href="#" class="hp-project" id="work">
+  <a href="#" class="hp-project">
     <div class="hp-description">
       <h3>Tembo Money</h3>
       <p>October 2020</p>
@@ -60,6 +64,14 @@
       <p>April 2020</p>
     </div>
     <div href="#" class="hp-image the-pass-hp"></div>
+  </a>
+
+  <a href="#" class="hp-project">
+    <div class="hp-description">
+      <h3>Coders of Colour</h3>
+      <p>July 2020</p>
+    </div>
+    <div href="#" class="hp-image coders-hp"></div>
   </a>
 
 </body>
