--- a/fare_new/index.html
+++ b/fare_new/index.html
@@ -12,11 +12,11 @@
   <link rel='shortcut icon' href='./img/favicon.png' type='image/png'/>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+</head>
+<body>
   <script>
     AOS.init();
   </script>
-</head>
-<body>
   <nav>
     <a class="logo" href="https://fare.studio">Fare</a>
     <div class="links">
@@ -29,7 +29,7 @@
     <h1>We work with ambitious brands, to build something new.</h1>
   </section>
 
-  <a href="#" class="hp-project" id="work">
+  <a data-aos="fade-up" data-aos-duration="1000" href="#" class="hp-project" id="work">
     <div class="hp-description">
       <h3>Built Open</h3>
       <p>Launching 2021</p>
@@ -37,12 +37,12 @@
     <div href="#" class="hp-image built-open-hp"></div>
   </a>
 
-  <section>
+  <section data-aos="fade-up" data-aos-duration="1000" >
     <h2>We are your perfect design partner. We work with businesses who want to build something fun, interesting and new to bring out the best from your business and team.</h2>
     <a href="mailto:hi@fare.studio" class="large underline">Work with us</a>
   </section>
 
-  <a href="#" class="hp-project">
+  <a data-aos="fade-up" data-aos-duration="1000" href="#" class="hp-project">
     <div class="hp-description">
       <h3>Tembo Money</h3>
       <p>October 2020</p>
@@ -50,7 +50,7 @@
     <div href="#" class="hp-image tembo-hp"></div>
   </a>
 
-  <a href="#" class="hp-project">
+  <a data-aos="fade-up" data-aos-duration="1000" href="#" class="hp-project">
     <div class="hp-description">
       <h3>With</h3>
       <p>Launching 2021</p>
@@ -58,7 +58,7 @@
     <div href="#" class="hp-image with-hp"></div>
   </a>
 
-  <a href="#" class="hp-project">
+  <a data-aos="fade-up" data-aos-duration="1000" href="#" class="hp-project">
     <div class="hp-description">
       <h3>The Pass</h3>
       <p>April 2020</p>
@@ -66,7 +66,7 @@
     <div href="#" class="hp-image the-pass-hp"></div>
   </a>
 
-  <a href="#" class="hp-project">
+  <a data-aos="fade-up" data-aos-duration="1000" href="#" class="hp-project">
     <div class="hp-description">
       <h3>Coders of Colour</h3>
       <p>July 2020</p>
