Updated and added Built Open

--- a/fare_new/index.html
+++ b/fare_new/index.html
@@ -9,6 +9,7 @@
   <title>Fare - A studio focussed on doing good</title>
   <link rel="stylesheet" href="./reset.css">
   <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" href="./homepage.css">
   <link rel='shortcut icon' href='./img/favicon.png' type='image/png'/>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -25,53 +26,53 @@
     </div>
   </nav>
 
-  <section data-aos="fade-up" data-aos-duration="1500">
+  <section data-aos="fade-up" data-aos-once="true"  data-aos-duration="1500" data-aos-once="true">
     <h1>We work with ambitious brands, to build something new.</h1>
   </section>
 
-  <a data-aos="fade-up" data-aos-duration="1500" href="#" class="hp-project" id="work">
-    <div class="hp-description">
+  <a data-aos="fade-up" data-aos-duration="1500" data-aos-once="true"  href="./built-open.html" class="hp-project" id="work">
+    <div class="project-description">
       <h3>Built Open</h3>
       <p>Launching 2021</p>
     </div>
-    <div href="#" class="hp-image built-open-hp"></div>
+    <div href="#" class="hp-image hp-built-open"></div>
   </a>
 
   <section>
-    <h2 data-aos="fade-up" data-aos-duration="1500">We are your perfect design partner. We work with businesses who want to build something fun, interesting and new to bring out the best from your business and team.</h2>
+    <h2 data-aos="fade-up" data-aos-duration="1500" data-aos-once="true" >We are your perfect design partner. We work with businesses who want to build something fun, interesting and new to bring out the best from your business and team.</h2>
     <a href="mailto:hi@fare.studio" class="large underline" data-aos="fade-up" data-aos-duration="1500">Work with us</a>
   </section>
 
-  <a data-aos="fade-up" data-aos-duration="1500" href="#" class="hp-project">
-    <div class="hp-description">
+  <a data-aos="fade-up" data-aos-duration="1500" href="#" data-aos-once="true"  class="hp-project">
+    <div class="project-description">
       <h3>Tembo Money</h3>
       <p>October 2020</p>
     </div>
-    <div href="#" class="hp-image tembo-hp"></div>
+    <div href="#" class="hp-image hp-tembo"></div>
   </a>
 
-  <a data-aos="fade-up" data-aos-duration="1500" href="#" class="hp-project">
-    <div class="hp-description">
+  <a data-aos="fade-up" data-aos-duration="1500" href="#" data-aos-once="true"  class="hp-project">
+    <div class="project-description">
       <h3>With</h3>
       <p>Launching 2021</p>
     </div>
-    <div href="#" class="hp-image with-hp"></div>
+    <div href="#" class="hp-image hp-with"></div>
   </a>
 
-  <a data-aos="fade-up" data-aos-duration="1500" href="#" class="hp-project">
-    <div class="hp-description">
+  <a data-aos="fade-up" data-aos-duration="1500" href="#" data-aos-once="true"  class="hp-project">
+    <div class="project-description">
       <h3>The Pass</h3>
       <p>April 2020</p>
     </div>
-    <div href="#" class="hp-image the-pass-hp"></div>
+    <div href="#" class="hp-image hp-the-pass"></div>
   </a>
 
-  <a data-aos="fade-up" data-aos-duration="1500" href="#" class="hp-project">
-    <div class="hp-description">
+  <a data-aos="fade-up" data-aos-duration="1500" href="#" data-aos-once="true"  class="hp-project">
+    <div class="project-description">
       <h3>Coders of Colour</h3>
       <p>July 2020</p>
     </div>
-    <div href="#" class="hp-image coders-hp"></div>
+    <div href="#" class="hp-image hp-coders"></div>
   </a>
 
 </body>
