Updates to The Pass page

--- a/fare_new/built-open.html
+++ b/fare_new/built-open.html
@@ -56,8 +56,8 @@
     <p data-aos="fade-up" data-aos-duration="1500" data-aos-once="true"  class="large">Turning training in construction on it's head and launching in 2021 Built Open will change the construction industry for good.</p>
   </section>
 
-  <section class="project-next" data-aos="fade-up" data-aos-duration="1500" data-aos-once="true">
-    <a href="#" class="large underline">Next project</a>
+  <section class="project-next">
+    <a class="large underline">Next project</a>
   </section>
 
 </body>
