--- a/fare_new/index.html
+++ b/fare_new/index.html
@@ -59,7 +59,7 @@
     <div href="#" class="hp-image hp-with"></div>
   </a>
 
-  <a data-aos="fade-up" data-aos-duration="1500" href="#" data-aos-once="true"  class="hp-project">
+  <a data-aos="fade-up" data-aos-duration="1500" href="./the-pass.html" data-aos-once="true"  class="hp-project">
     <div class="project-description">
       <h3>The Pass</h3>
       <p>April 2020</p>
