Few fixes and link changes

--- a/fare_new/built-open.html
+++ b/fare_new/built-open.html
@@ -57,7 +57,7 @@
   </section>
 
   <section class="project-next">
-    <a class="large underline">Next project</a>
+    <a href="./tembo.html" class="large underline">Next project</a>
   </section>
 
 </body>
