--- a/fare_new/index.html
+++ b/fare_new/index.html
@@ -26,11 +26,11 @@
     </div>
   </nav>
 
-  <section data-aos="fade-up" data-aos-once="true"  data-aos-duration="1500" data-aos-once="true">
+  <section data-aos="fade-up"  data-aos-duration="1500" data-aos-once="true">
     <h1>We work with ambitious brands, to build something new.</h1>
   </section>
 
-  <a data-aos="fade-up" data-aos-duration="1500" data-aos-once="true"  href="./built-open.html" class="hp-project" id="work">
+  <a data-aos="fade-up" data-aos-duration="1500"  href="./built-open.html" class="hp-project" id="work">
     <div class="project-description">
       <h3>Built Open</h3>
       <p>Launching 2021</p>
@@ -39,11 +39,11 @@
   </a>
 
   <section>
-    <h2 data-aos="fade-up" data-aos-duration="1500" data-aos-once="true" >We are your perfect design partner. We work with businesses who want to build something fun, interesting and new to bring out the best from your business and team.</h2>
+    <h2 data-aos="fade-up" data-aos-duration="1500" >We are your perfect design partner. We work with businesses who want to build something fun, interesting and new to bring out the best from your business and team.</h2>
     <a href="mailto:hi@fare.studio" class="large underline" data-aos="fade-up" data-aos-duration="1500">Work with us</a>
   </section>
 
-  <a data-aos="fade-up" data-aos-duration="1500" href="#" data-aos-once="true"  class="hp-project">
+  <a data-aos="fade-up" data-aos-duration="1500" href="#"  class="hp-project">
     <div class="project-description">
       <h3>Tembo Money</h3>
       <p>October 2020</p>
@@ -51,7 +51,7 @@
     <div href="#" class="hp-image hp-tembo"></div>
   </a>
 
-  <a data-aos="fade-up" data-aos-duration="1500" href="#" data-aos-once="true"  class="hp-project">
+  <a data-aos="fade-up" data-aos-duration="1500" href="#"  class="hp-project">
     <div class="project-description">
       <h3>With</h3>
       <p>Launching 2021</p>
@@ -59,7 +59,7 @@
     <div href="#" class="hp-image hp-with"></div>
   </a>
 
-  <a data-aos="fade-up" data-aos-duration="1500" href="./the-pass.html" data-aos-once="true"  class="hp-project">
+  <a data-aos="fade-up" data-aos-duration="1500" href="./the-pass.html"  class="hp-project">
     <div class="project-description">
       <h3>The Pass</h3>
       <p>April 2020</p>
@@ -67,7 +67,7 @@
     <div href="#" class="hp-image hp-the-pass"></div>
   </a>
 
-  <a data-aos="fade-up" data-aos-duration="1500" href="#" data-aos-once="true"  class="hp-project">
+  <a data-aos="fade-up" data-aos-duration="1500" href="#"  class="hp-project">
     <div class="project-description">
       <h3>Coders of Colour</h3>
       <p>July 2020</p>
