--- a/fare_new/the-pass.html
+++ b/fare_new/the-pass.html
@@ -46,7 +46,7 @@
   <section class="project-image the-pass-image-2" data-aos="fade-up" data-aos-duration="1500" data-aos-once="true"></section>
 
   <section>
-    <p data-aos="fade-up" data-aos-duration="1500" data-aos-once="true" class="large">We knew it was essential to allow our customers brands to feel at home on <a class="underline" href="https://thepass.london">our website</a>. We decided to mimic a menu based layout with a subtle grid system to help merge both restaurants identity with the identity of The Pass.</p>
+    <p data-aos="fade-up" data-aos-duration="1500" data-aos-once="true" class="large">We knew it was essential to allow the restaurants brands to feel at home on The Pass. We decided to mimic a menu based layout with a subtle grid system to help merge both restaurants identity with the identity of The Pass.</p>
   </section>
 
   <section class="project-image the-pass-image-3" data-aos-once="true" data-aos="fade-up" data-aos-duration="1500"></section>
@@ -58,7 +58,7 @@
   <section class="project-image the-pass-image-4" data-aos-once="true" data-aos="fade-up" data-aos-duration="1500"></section>
 
   <section class="project-next">
-    <a class="large underline">Next project</a>
+    <a href="./coders.html" class="large underline">Next project</a>
   </section>
 
 </body>
