Update and add Tembo page

--- a/fare_new/coders.html
+++ b/fare_new/coders.html
@@ -18,7 +18,7 @@
   <script>
     AOS.init();
   </script>
-  <nav>
+  <nav class="white">
     <a class="logo" href="./">Fare</a>
     <div class="links">
       <a href="./index.html#work">Our work</a>
