--- a/fare_new/index.html
+++ b/fare_new/index.html
@@ -43,7 +43,7 @@
     <a href="mailto:hi@fare.studio" class="large underline" data-aos="fade-up" data-aos-duration="1500">Work with us</a>
   </section>
 
-  <a data-aos="fade-up" data-aos-duration="1500" href="#"  class="hp-project">
+  <a data-aos="fade-up" data-aos-duration="1500" href="./tembo.html"  class="hp-project">
     <div class="project-description">
       <h3>Tembo Money</h3>
       <p>October 2020</p>
@@ -51,10 +51,10 @@
     <div href="#" class="hp-image hp-tembo"></div>
   </a>
 
-  <a data-aos="fade-up" data-aos-duration="1500" href="#"  class="hp-project">
+  <a data-aos="fade-up" data-aos-duration="1500" class="hp-project">
     <div class="project-description">
       <h3>With</h3>
-      <p>Launching 2021</p>
+      <p>Coming soon</p>
     </div>
     <div href="#" class="hp-image hp-with"></div>
   </a>
