--- a/fare_new/index.html
+++ b/fare_new/index.html
@@ -19,7 +19,7 @@
     AOS.init();
   </script>
   <nav>
-    <a class="logo" href="https://fare.studio">Fare</a>
+    <a class="logo" href="/">Fare</a>
     <div class="links">
       <a href="#work">Our work</a>
       <a href="mailto:hi@fare.studio">Contact us</a>
@@ -67,7 +67,7 @@
     <div href="#" class="hp-image hp-the-pass"></div>
   </a>
 
-  <a data-aos="fade-up" data-aos-duration="1500" href="#"  class="hp-project">
+  <a data-aos="fade-up" data-aos-duration="1500" href="./coders.html"  class="hp-project">
     <div class="project-description">
       <h3>Coders of Colour</h3>
       <p>July 2020</p>
