Added process page

--- a/fare_new/built-open.html
+++ b/fare_new/built-open.html
@@ -21,7 +21,8 @@
   <nav>
     <a class="logo" href="./">Fare</a>
     <div class="links">
-      <a href="./index.html#work">Our work</a>
+      <a href="./index.html#work">Work</a>
+      <a href="./our-process.html">Our process</a>
       <a href="mailto:hi@fare.studio">Contact us</a>
     </div>
   </nav>
