Updates to copy on our process page

--- a/fare_new/our-process.html
+++ b/fare_new/our-process.html
@@ -38,7 +38,7 @@
         <li>Mini design sprint</li>
         <li>User research & interviews</li>
         <li>Competitor analysis</li>
-        <li>Branding review</li>
+        <li>Branding workshop</li>
       </ul>
     </div>
 
@@ -58,8 +58,8 @@
     <div data-aos="fade-up"  data-aos-duration="1500" data-aos-once="true">
       <h2>Week <span>three</span></h2>
       <ul>
-        <li>Product user testing</li>
-        <li>Iterative design changes</li>
+        <li>Brand identity proposal</li>
+        <li>UI of happy path</li>
       </ul>
     </div>
 
