--- a/fare_new/our-process.html
+++ b/fare_new/our-process.html
@@ -22,7 +22,7 @@
     <a class="logo" href="./">Fare</a>
     <div class="links">
       <a href="./#work">Work</a>
-      <a href="/">Our process</a>
+      <a href="/">Build</a>
       <a href="mailto:hi@fare.studio">Contact us</a>
     </div>
   </nav>
