--- a/fare_new/tembo.html
+++ b/fare_new/tembo.html
@@ -22,7 +22,7 @@
     <a class="logo" href="./">Fare</a>
     <div class="links">
       <a href="./index.html#work">Work</a>
-      <a href="./our-process.html">Our process</a>
+      <a href="./our-process.html">Build</a>
       <a href="mailto:hi@fare.studio">Contact us</a>
     </div>
   </nav>
