--- a/our-process.html
+++ b/our-process.html
@@ -23,7 +23,7 @@
     <div class="links">
       <a href="./#work">Work</a>
       <a href="/">Build</a>
-      <a href="mailto:hi@fare.studio">Contact us</a>
+      <a href="mailto:hi@fare.studio">Email</a>
     </div>
   </nav>
 
