--- a/coders.html
+++ b/coders.html
@@ -23,7 +23,7 @@
     <div class="links">
       <a href="./index.html#work">Work</a>
       <a href="./our-process.html">Build</a>
-      <a href="mailto:hi@fare.studio">Contact us</a>
+      <a href="mailto:hi@fare.studio">Email</a>
     </div>
   </nav>
 
