Updates to Tembo Blog
Added three more blog pages and an index page

--- a/tembo-blog/index.html
+++ b/tembo-blog/index.html
@@ -10,69 +10,36 @@
   
 </head>
 <body>
-  <h1>A cheaper and less risky alternative to a family guarantor mortgage</h1>
-  <figure class="full-width">
-    <img src="./assets/main_image.jpg" alt="Family moving in with boxes and unpacking them.">
-  </figure>
-  <section class="content story">
-    <p class="bold intro">Guarantor mortgages are available for first-time buyers to allow families to help their children or grandchildren get a leg-up onto the property ladder.</p>
-    <p>There are two ways of helping out.  The family can either put some of their savings into a special account with the mortgage lender.  This money is locked away for a number of years until the mortgage has been reduced.  Alternatively the family can put their home up as security.</p>
-    <p>If the lender has to repossess and sell the child’s property, and they don’t get all of their money back, then they could get the difference from either the savings or from the family home that has been put up as security.</p>
-    <p>The Barclays Springboard Mortgage requires parents to put 10% into a Helpful Start account, which is held for 5 years and then released if all payments have been made.  The interest rate is 3.05% on the mortgage.</p>
-  </section>
-  <section class="content story situation">
-    <p class="bold">Pete's situation</p>
-    <p>Pete wants to buy a £250,000 house.  He’s saved up £12,500 for a deposit, but is unable to get a mortgage on his own.  Pete’s family have offered to put up £25,000 to support him getting onto the property ladder.</p>
-    <p>For Pete this would mean he would have a mortgage of £237,500 and monthly repayments of £1,132.  At the end of the five year fixed term, Pete would have paid £34,000 in interest to Barclays and his outstanding balance on his mortgage would be £203,000.  If he’d paid all his monthly repayments then his parents would get their money back after five years.</p>
-    <p>If Pete’s parents didn’t have the cash available they could opt to take a property guarantee against their own home.  The rates for these mortgages currently start at around 3.47% and the parents would need a guarantee of about 20% of the value of the mortgage which would be charged against their home.</p>
-    <p>For Pete this would mean monthly payments about £50 higher at £1,185.  He would pay a total of £39,000 in interest and would have £205,000 remaining on his mortgage after five years.</p>
-  </section>
-  <section class="content cta">
-    <h2>Tembo can save you thousands on your mortgage</h2>
-    <p>Sign up to Tembo today and you’ll get a £500 boost to add to your mortgage deposit! Easy money, great savings.</p>
-    <a class="button" href="#">Sign up</a>
-  </section>
-  <section class="content story">
-    <h2>How can Tembo save Pete money?</h2>
-    <p class="bold intro">Pete needs to borrow £237,500 to buy his home.</p>
-    <p>Instead of a Guarantor Mortgage, through Tembo, Pete’s family could arrange for a small retirement interest only mortgage against their home.  They could arrange this through Tembo and take out £37,500 and put it towards Pete’s home purchase.</p>
-    <p>This means that Pete’s mortgage is now only 80% of the value of the home, so the interest rates are much lower at around 2.2%.</p>
-  
-    <div class="savings-container">
-      <div class="savings">
-        <div class="savings-card competitor">
-          <h3>£34,000</h3>
-          <p>Springboard</p>
-        </div>
-        <div class="savings-card competitor">
-          <h3>£39,000</h3>
-          <p>Guarantee</p>
-        </div>
-        <div class="savings-card tembo">
-          <div>
-            <h3>£30,000</h3>
-            <p>Tembo</p>
-          </div>
-          <img src="./assets/equals.svg" alt="Equals symbol">
-          <div>
-            <h3>£4 to 9k</h3>
-            <p>Saving</p>
-          </div>
-        </div>
-      </div>
-      <h5>Interest paid over 5 year fixed term</h5>
+  <section class="index-page">
+    <div class="intro">
+      <h2>Usecases</h2>
+      <p>Articles about situations where people could have used Tembo to save them thousands of pounds.</p>
     </div>
-
-    <p>Over the next five years Pete will pay the same monthly amount of £1,132.  But at the end of the five years, he will have only paid £30,000 in interest, including the interest on his family’s interest only mortgage.  That is a saving in interest payments of £4,000 compared to the Barclays Springboard and £9,000 compared to the property guarantee mortgage.</p>
-    <p>Having paid down some mortgage and hopefully with a little increase in the value of his home Pete could then opt to re-mortgage. He might also decide to return the gift of £37,500 from his family too.  But by using Tembo, Pete will own £9,000 more of his home than if he opted for a guarantor mortgage.</p>
-    <p class="bold">More money for Pete, less money for the bank.</p>
-  </section>
-
-  <section class="bottom-cta">
-    <div class="cta-content">
-      <h2>Are you in the same position as Pete?</h2>
-      <p>Sign up to Tembo today and we’ll contact you to see how we can help you make better use of your money.</p>
-      <a href="#" class="button">Sign up and arrange a call</a>
+    <div class="article-list">
+      <div class="article-mini">
+        <a href="./guarantor.html"><img src="./assets/guarantor_thumbnail.jpg" aria-hidden="true"></a>
+        <h3>A cheaper and less risky alternative to a family guarantor mortgage</h3>
+        <p>Getting onto the property ladder in Britain has become a real challenge in recent years.</p>
+        <a href="./guarantor.html" class="button read">Read</a>
+      </div>
+      <div class="article-mini">
+        <a href="./property_ladder.html"><img src="./assets/ladder_thumbnail.jpg" aria-hidden="true"></a>
+        <h3>How to get on the property ladder and save money with Tembo</h3>
+        <p>Meet Clare who works in marketing and lives in Birmingham.</p>
+        <a href="./property_ladder.html" class="button read">Read</a>
+      </div>
+      <div class="article-mini">
+        <a href="./rio.html"><img src="./assets/rio_thumbnail.jpg" aria-hidden="true"></a>
+        <h3>What is a Retirement Interest Only mortgage?</h3>
+        <p>If someone in your family is owns their own home, it’s likely that it makes up the majority of their overall net worth.</p>
+        <a href="./rio.html" class="button read">Read</a>
+      </div>
+      <div class="article-mini">
+        <a href="./unlock.html"><img src="./assets/unlock_thumbnail.jpg" aria-hidden="true"></a>
+        <h3>How to unlock some value from your home to help your family onto the property ladder</h3>
+        <p>It’s tough watching a loved one struggle with their finances and unable to afford a mortgage.</p>
+        <a href="./unlock.html" class="button read">Read</a>
+      </div>
     </div>
   </section>
   
